# MonkeyUI

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  LICENSE  PROJECT_STRUCTURE.md  QUICKSTART.md  README.md  README.zh-CN.md  designmonkey.code-workspace  docker-compose.yml  fly.toml  monkeyui.code-workspace  package-lock.json  package.json  setup-auth.sh  setup.sh
.github/: agent.md  copilot-instructions.md
.github/workflows/: ci.yml  fly-deploy.yml
backend/: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  README.md  pyproject.toml  start-dev-autoreload.sh  start-dev.sh
backend/apps/accounts/: admin.py  encryption.py  models.py  serializers.py  tests.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py  0002_userapikey.py  0003_add_userllmconfig.py  0004_add_is_default_to_userllmconfig.py
backend/apps/core/: models.py  serializers.py  views.py
backend/apps/design_system/: __init__.py  apps.py  models.py  schema.py  serializers.py  services.py  tasks.py  tests.py  urls.py  views.py
backend/apps/design_system/llm/: __init__.py  config.py  providers.py
backend/apps/design_system/mcp/: __init__.py  cli.py  mcp_server.py  server.py  test_server_calls.py  tests.py  views.py
backend/apps/design_system/migrations/: 0001_initial.py  0002_remove_designsystemimage_height_and_more.py
backend/apps/design_system/prompts/: __init__.py  aesthetic_analysis.md  design_system.md  design_system_analysis.md  design_system_json.md  design_system_single_step.md  image_analysis.md  style_specific_analysis.md  visual_style_detection.md
backend/config/: __init__.py  asgi.py  celery.py  settings.py  test_settings.py  urls.py  wsgi.py
docs/: MCP_TOOLS.md  QUICKSTART.md  README.md
frontend/: .dockerignore  .env.example  Dockerfile  README.md  index.html  package.json  tailwind.config.js
frontend/src/: App.jsx  i18n.js  index.css
frontend/src/contexts/: AuthContext.jsx
frontend/src/lib/: analytics.js  api.js
frontend/src/pages/: DesignWorkshop.jsx  Login.jsx  Register.jsx  (+2 more)
(+22 files in other folders)
